# bare_os

./: Cargo.toml  Makefile  README.md  boot_sec.asm  print.asm
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
src/boot_loader/: boot.asm  disk.asm  gdt.asm  protected.asm
src/kernel/: entry.asm
